--- a/Practica_Multimodal_Final.ipynb
+++ b/Practica_Multimodal_Final.ipynb
@@ -4,28 +4,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sistema de Seguridad (Asistente Multimodal) — Vídeo ➜ Vídeo + Voz\n",
+    "# Sistema de Seguridad (Asistente Multimodal) — Vídeo ➜ Vídeo anotado + Voz\n",
     "\n",
-    "**Objetivo del prototipo**  \n",
-    "Procesar vídeos de cámaras de seguridad (`videos/entrada/*.mp4`) y, tras cada vídeo:\n",
+    "## Objetivo\n",
+    "Este notebook implementa un **prototipo de asistente para cámaras de seguridad** que procesa vídeos de entrada (`videos/entrada/*.mp4`) y, **al finalizar cada vídeo**:\n",
     "\n",
-    "- Generar un **vídeo de salida** con las **personas recuadradas** y, si corresponde, la **caja/paquete recuadrada**.\n",
-    "- Mostrar un **print**:\n",
-    "  - Si se detecta que una persona porta una caja/paquete: `Ha llegado un repartidor a tu casa`.\n",
-    "  - Si no: `Ha llegado alguien desconocido a tu casa`.\n",
-    "- Generar un **audio (TTS)** con un mensaje parecido:\n",
-    "  - Repartidor: “Ha llegado un repartidor a tu domicilio, ¿deseas abrirle?”\n",
-    "  - Desconocido: “Ha llegado alguien desconocido a tu domicilio, ¿deseas abrir?”\n",
+    "1. Genera un **vídeo de salida** en `videos/salida/` con las **personas recuadradas**.\n",
+    "2. Clasifica el evento como:\n",
+    "   - **Repartidor** si detecta que **alguna persona porta un paquete/caja**.\n",
+    "   - **Desconocido** si **no** hay evidencia de paquete/caja.\n",
+    "3. Muestra un **print** con la decisión:\n",
+    "   - `Ha llegado un repartidor a tu casa`\n",
+    "   - `Ha llegado alguien desconocido a tu casa`\n",
+    "4. Genera un **audio (TTS)** `.mp3` con un mensaje equivalente:\n",
+    "   - Repartidor: “Ha llegado un repartidor a tu domicilio. ¿Deseas abrirle?”\n",
+    "   - Desconocido: “Ha llegado alguien desconocido a tu domicilio. ¿Deseas abrir?”\n",
     "\n",
-    "**Notas de implementación**\n",
-    "- Detección de personas con **YOLOv8**.\n",
-    "- Detección de “caja/paquete” con **CLIP** aplicado a un recorte por persona (heurística ligera).\n",
-    "- Salidas en `videos/salida/`.\n"
+    "## Cómo funciona el pipeline\n",
+    "- **Detección (YOLOv8)**: en cada frame se detectan personas (`class=person`).\n",
+    "- **Verificación de “paquete/caja” (CLIP)**: para cada persona detectada, se recorta la región de la persona y se aplica CLIP con un **clasificador binario**:\n",
+    "  - positivo: “persona sosteniendo un paquete/caja”\n",
+    "  - negativo: “persona sin nada en las manos”\n",
+    "\n",
+    "Esto se diseñó así para **reducir falsos positivos** (CLIP sobre recortes pequeños suele “imaginar” paquetes).\n",
+    "\n",
+    "## Calibración automática (anti-falsos-positivos)\n",
+    "Si en tu dataset el **primer vídeo no tiene repartidor**, el notebook puede usarlo como **negativo** para calibrar automáticamente un umbral de CLIP y evitar que aparezca “repartidor” donde no corresponde.\n",
+    "\n",
+    "## Entradas y salidas\n",
+    "- **Entrada**: vídeos `.mp4` en `videos/entrada/`\n",
+    "- **Salida**:\n",
+    "  - `videos/salida/output_<nombre>.mp4` (vídeo anotado)\n",
+    "  - `videos/salida/output_<nombre>.mp3` (audio TTS)\n",
+    "\n",
+    "## Notas\n",
+    "- El sistema está pensado para ser simple y generalizable: funciona con cualquier vídeo donde aparezcan personas.\n",
+    "- Puedes ajustar sensibilidad con `clip_threshold` y `clip_margin` en la función de ejecución del pipeline.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -39,8 +58,6 @@
    ],
    "source": [
     "# Setup (instalación de dependencias)\n",
-    "# Nota: si ya tienes un venv con todo, esta celda puede omitirse.\n",
-    "\n",
     "import sys\n",
     "import subprocess\n",
     "\n",
@@ -53,7 +70,6 @@
     "    \"torch\",\n",
     "    \"torchvision\",\n",
     "    \"gTTS\",\n",
-    "    # Evita errores de compatibilidad (p.ej. tensorflow -> protobuf)\n",
     "    \"protobuf>=5.28.0\",\n",
     "]\n",
     "\n",
@@ -68,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -84,8 +100,6 @@
    "source": [
     "from __future__ import annotations\n",
     "\n",
-    "# IMPORTANTE: evitar que Transformers intente importar TensorFlow.\n",
-    "# En Windows + Python 3.13 es frecuente que TF/protobuf rompan imports.\n",
     "import os\n",
     "os.environ.setdefault(\"TRANSFORMERS_NO_TF\", \"1\")\n",
     "os.environ.setdefault(\"TRANSFORMERS_NO_FLAX\", \"1\")\n",
@@ -117,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,16 +197,53 @@
     "        return (self.x2 - self.x1) * (self.y2 - self.y1)\n",
     "\n",
     "\n",
-    "def draw_box(img_bgr: np.ndarray, box: Box, label: str, color: Tuple[int, int, int], thickness: int = 2) -> None:\n",
+    "def draw_box(\n",
+    "    img_bgr: np.ndarray,\n",
+    "    box: Box,\n",
+    "    label: str,\n",
+    "    color: Tuple[int, int, int],\n",
+    "    thickness: int = 2,\n",
+    ") -> None:\n",
+    "    \"\"\"Dibuja un bounding box y una etiqueta sobre un frame (BGR).\n",
+    "\n",
+    "    Esta función se usa para generar el **vídeo de salida anotado**.\n",
+    "\n",
+    "    Args:\n",
+    "        img_bgr: Imagen/frame en formato BGR (OpenCV).\n",
+    "        box: Coordenadas (x1,y1,x2,y2) ya recortadas al frame.\n",
+    "        label: Texto a mostrar (si es vacío, solo dibuja el rectángulo).\n",
+    "        color: Color BGR del rectángulo y fondo de la etiqueta.\n",
+    "        thickness: Grosor del rectángulo.\n",
+    "    \"\"\"\n",
     "    cv2.rectangle(img_bgr, (box.x1, box.y1), (box.x2, box.y2), color, thickness)\n",
     "    if label:\n",
     "        (tw, th), baseline = cv2.getTextSize(label, cv2.FONT_HERSHEY_SIMPLEX, 0.6, 2)\n",
     "        y = max(0, box.y1 - th - baseline - 4)\n",
     "        cv2.rectangle(img_bgr, (box.x1, y), (box.x1 + tw + 6, y + th + baseline + 6), color, -1)\n",
-    "        cv2.putText(img_bgr, label, (box.x1 + 3, y + th + 3), cv2.FONT_HERSHEY_SIMPLEX, 0.6, (0, 0, 0), 2)\n",
+    "        cv2.putText(\n",
+    "            img_bgr,\n",
+    "            label,\n",
+    "            (box.x1 + 3, y + th + 3),\n",
+    "            cv2.FONT_HERSHEY_SIMPLEX,\n",
+    "            0.6,\n",
+    "            (0, 0, 0),\n",
+    "            2,\n",
+    "        )\n",
     "\n",
     "\n",
     "def tts_to_mp3(text: str, out_path: Path, lang: str = \"es\") -> Path:\n",
+    "    \"\"\"Genera un audio TTS (mp3) con el mensaje final del asistente.\n",
+    "\n",
+    "    Esta función se usa para producir la **salida de voz** al terminar cada vídeo.\n",
+    "\n",
+    "    Args:\n",
+    "        text: Frase a sintetizar.\n",
+    "        out_path: Ruta de salida del archivo `.mp3`.\n",
+    "        lang: Idioma para gTTS (por defecto \"es\").\n",
+    "\n",
+    "    Returns:\n",
+    "        La ruta donde se guardó el mp3.\n",
+    "    \"\"\"\n",
     "    out_path.parent.mkdir(parents=True, exist_ok=True)\n",
     "    tts = gTTS(text=text, lang=lang)\n",
     "    tts.save(str(out_path))\n",
@@ -228,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,12 +290,27 @@
     "    clip_margin: float = 0.15,\n",
     "    min_person_area_ratio: float = 0.03,\n",
     ") -> Tuple[np.ndarray, bool]:\n",
-    "    \"\"\"Devuelve (frame_anotado, delivery_detected_en_este_frame).\n",
+    "    \"\"\"Procesa un frame y devuelve el frame anotado + una bandera de 'repartidor'.\n",
     "\n",
-    "    Cambios respecto a la versión anterior:\n",
-    "    - CLIP binario sobre el recorte COMPLETO de la persona (menos falsos positivos)\n",
-    "    - Requiere margen p_pos > p_neg + clip_margin\n",
-    "    - Ignora personas muy pequeñas (ruido)\n",
+    "    Esta función es la unidad básica para construir el **vídeo de salida**:\n",
+    "    - Detecta personas con YOLO.\n",
+    "    - Para cada persona, aplica CLIP binario sobre el recorte de la persona.\n",
+    "    - Dibuja bounding boxes y etiquetas.\n",
+    "\n",
+    "    Args:\n",
+    "        frame_bgr: Frame de entrada (BGR, OpenCV).\n",
+    "        conf: Umbral de confianza para YOLO.\n",
+    "        clip_threshold: Umbral mínimo de probabilidad para declarar \"repartidor\".\n",
+    "        clip_margin: Margen adicional para exigir separación entre positivo y negativo.\n",
+    "        min_person_area_ratio: Ignora detecciones de persona demasiado pequeñas.\n",
+    "\n",
+    "    Returns:\n",
+    "        (frame_anotado, delivery_en_este_frame)\n",
+    "\n",
+    "    Notas:\n",
+    "        - Este diseño prioriza **bajo falso positivo**.\n",
+    "        - El evento final del vídeo se marca como repartidor si `delivery_en_este_frame` es True\n",
+    "          en cualquier frame del clip.\n",
     "    \"\"\"\n",
     "    annotated = frame_bgr.copy()\n",
     "    h, w = annotated.shape[:2]\n",
@@ -269,7 +335,6 @@
     "        if not person.valid() or person.area() < min_person_area:\n",
     "            continue\n",
     "\n",
-    "        # Clasificación CLIP sobre el recorte de la persona\n",
     "        person_crop_bgr = frame_bgr[person.y1 : person.y2, person.x1 : person.x2]\n",
     "        if person_crop_bgr.size == 0:\n",
     "            continue\n",
@@ -279,7 +344,6 @@
     "\n",
     "        p_pos, p_neg = clip_person_delivery_probs(pil_person)\n",
     "\n",
-    "        # Criterio robusto (reduce falsos positivos)\n",
     "        is_delivery = (p_pos >= clip_threshold) and (p_pos > p_neg + clip_margin)\n",
     "\n",
     "        if is_delivery:\n",
@@ -293,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +368,21 @@
     "    clip_threshold: float = 0.80,\n",
     "    max_frames: Optional[int] = None,\n",
     ") -> bool:\n",
-    "    \"\"\"Procesa un vídeo y devuelve True si se detectó 'repartidor' en algún frame.\"\"\"\n",
+    "    \"\"\"Procesa un vídeo completo y genera el vídeo anotado de salida.\n",
+    "\n",
+    "    Lee frames del vídeo de entrada, aplica `process_frame(...)` a cada uno y escribe un\n",
+    "    `.mp4` con las anotaciones (personas y etiqueta de \"REPARTIDOR\" cuando aplique).\n",
+    "\n",
+    "    Args:\n",
+    "        input_path: Ruta al `.mp4` de entrada.\n",
+    "        output_path: Ruta al `.mp4` anotado de salida.\n",
+    "        conf: Umbral de confianza YOLO.\n",
+    "        clip_threshold: Umbral de probabilidad CLIP para declarar repartidor.\n",
+    "        max_frames: Si se indica, limita el número de frames procesados (útil para pruebas).\n",
+    "\n",
+    "    Returns:\n",
+    "        True si se detectó repartidor en algún frame; False en caso contrario.\n",
+    "    \"\"\"\n",
     "\n",
     "    cap = cv2.VideoCapture(str(input_path))\n",
     "    if not cap.isOpened():\n",
@@ -352,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -477,10 +555,20 @@
     "    sample_every: int = 5,\n",
     "    max_frames: int = 200,\n",
     ") -> float:\n",
-    "    \"\"\"Usa un vídeo NEGATIVO (sin repartidor) para fijar un umbral alto que evite falsos positivos.\n",
+    "    \"\"\"Calibra automáticamente `clip_threshold` usando un vídeo negativo (sin repartidor).\n",
     "\n",
-    "    Estrategia: calcula el máximo p_pos observado (con margen p_pos > p_neg + clip_margin) y fija\n",
-    "    threshold = max_p_pos + 0.05 (cap a 0.95).\n",
+    "    Objetivo: evitar falsos positivos. Si el vídeo NEGATIVO nunca debería disparar \"repartidor\",\n",
+    "    medimos el máximo `p_pos` observado en ese vídeo y fijamos el umbral un poco por encima.\n",
+    "\n",
+    "    Args:\n",
+    "        negative_video: Vídeo que asumimos que NO contiene repartidor.\n",
+    "        conf: Umbral YOLO para encontrar personas.\n",
+    "        clip_margin: Solo considera candidatos donde p_pos > p_neg + clip_margin.\n",
+    "        sample_every: Procesa 1 de cada N frames (para acelerar).\n",
+    "        max_frames: Máximo de frames muestreados.\n",
+    "\n",
+    "    Returns:\n",
+    "        Un valor recomendado para `clip_threshold`.\n",
     "    \"\"\"\n",
     "    cap = cv2.VideoCapture(str(negative_video))\n",
     "    if not cap.isOpened():\n",
@@ -499,7 +587,6 @@
     "            if sample_every > 1 and (frame_idx % sample_every) != 0:\n",
     "                continue\n",
     "\n",
-    "            # Detecta personas y mide p_pos (sin escribir vídeo)\n",
     "            h, w = frame.shape[:2]\n",
     "            res = yolo.predict(frame, conf=conf, verbose=False)[0]\n",
     "            if res.boxes is None or len(res.boxes) == 0:\n",
@@ -540,12 +627,27 @@
     "    clip_margin: float = 0.15,\n",
     "    max_frames: Optional[int] = None,\n",
     ") -> None:\n",
+    "    \"\"\"Ejecuta el pipeline sobre todos los vídeos de una carpeta.\n",
+    "\n",
+    "    Para cada `.mp4` en `input_dir`:\n",
+    "    - Genera un `.mp4` anotado en `output_dir`.\n",
+    "    - Decide si es \"repartidor\" o \"desconocido\".\n",
+    "    - Imprime el mensaje final.\n",
+    "    - Genera un `.mp3` TTS con el mensaje.\n",
+    "\n",
+    "    Args:\n",
+    "        input_dir: Carpeta con vídeos de entrada.\n",
+    "        output_dir: Carpeta donde se guardan los vídeos y audios de salida.\n",
+    "        conf: Umbral YOLO.\n",
+    "        clip_threshold: Umbral CLIP para declarar repartidor. Si es None, se calibra con el primer vídeo.\n",
+    "        clip_margin: Margen adicional p_pos > p_neg + clip_margin.\n",
+    "        max_frames: Límite de frames (para pruebas).\n",
+    "    \"\"\"\n",
     "    videos = sorted(input_dir.glob(\"*.mp4\"))\n",
     "    if not videos:\n",
     "        print(f\"No hay vídeos .mp4 en {input_dir}\")\n",
     "        return\n",
     "\n",
-    "    # Según tu dataset: el primero NO es repartidor. Lo usamos para calibrar.\n",
     "    if clip_threshold is None:\n",
     "        clip_threshold = calibrate_clip_threshold_from_negative(\n",
     "            negative_video=videos[0],\n",
