acabado por fin

--- a/Practica_Multimodal_Final.ipynb
+++ b/Practica_Multimodal_Final.ipynb
@@ -29,7 +29,7 @@
     "Esto se diseñó así para **reducir falsos positivos** (CLIP sobre recortes pequeños suele “imaginar” paquetes).\n",
     "\n",
     "## Calibración automática (anti-falsos-positivos)\n",
-    "Si en tu dataset el **primer vídeo no tiene repartidor**, el notebook puede usarlo como **negativo** para calibrar automáticamente un umbral de CLIP y evitar que aparezca “repartidor” donde no corresponde.\n",
+    "En nuestro data set nuestro primer video no contiene ningun repartidor por lo que lo que hacemos es usarlo como **negativo** para calibrar automáticamente un umbral de CLIP y evitar que aparezca “repartidor” donde no corresponde.\n",
     "\n",
     "## Entradas y salidas\n",
     "- **Entrada**: vídeos `.mp4` en `videos/entrada/`\n",
