--- a/Practica_Multimodal_Final.ipynb
+++ b/Practica_Multimodal_Final.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -84,16 +84,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\alema\\anaconda3\\envs\\idspia\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "device: cuda\n",
-      "Input: c:\\Users\\jordi\\Documents\\UNI\\SegurityGuard\\videos\\entrada\n",
-      "Output: c:\\Users\\jordi\\Documents\\UNI\\SegurityGuard\\videos\\salida\n"
+      "device: cpu\n",
+      "Input: c:\\Users\\alema\\Documents\\Ingenieria IA\\TERCERO\\1 CUATRI\\persona-maquina\\SegurityGuard\\videos\\entrada\n",
+      "Output: c:\\Users\\alema\\Documents\\Ingenieria IA\\TERCERO\\1 CUATRI\\persona-maquina\\SegurityGuard\\videos\\salida\n"
      ]
     }
    ],
@@ -131,14 +139,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using a slow image processor as `use_fast` is unset and a slow processor was saved with this model. `use_fast=True` will be the default behavior in v4.52, even if the model was saved with a slow processor. This will result in minor differences in outputs. You'll still be able to use a slow processor with `use_fast=False`.\n",
+      "c:\\Users\\alema\\anaconda3\\envs\\idspia\\Lib\\site-packages\\huggingface_hub\\file_download.py:143: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\alema\\.cache\\huggingface\\hub\\models--openai--clip-vit-base-patch32. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
+      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
+      "  warnings.warn(message)\n",
+      "Xet Storage is enabled for this repo, but the 'hf_xet' package is not installed. Falling back to regular HTTP download. For better performance, install the package with: `pip install huggingface_hub[hf_xet]` or `pip install hf_xet`\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Modelos cargados\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Xet Storage is enabled for this repo, but the 'hf_xet' package is not installed. Falling back to regular HTTP download. For better performance, install the package with: `pip install huggingface_hub[hf_xet]` or `pip install hf_xet`\n"
      ]
     }
    ],
@@ -169,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -440,28 +466,28 @@
       "\n",
       "Procesando: video_01.mp4\n",
       "Ha llegado un repartidor a tu casa\n",
-      "Vídeo salida: c:\\Users\\jordi\\Documents\\UNI\\SegurityGuard\\videos\\salida\\output_video_01.mp4\n",
-      "Audio salida: c:\\Users\\jordi\\Documents\\UNI\\SegurityGuard\\videos\\salida\\output_video_01.mp3\n",
+      "Vídeo salida: c:\\Users\\alema\\Documents\\Ingenieria IA\\TERCERO\\1 CUATRI\\persona-maquina\\SegurityGuard\\videos\\salida\\output_video_01.mp4\n",
+      "Audio salida: c:\\Users\\alema\\Documents\\Ingenieria IA\\TERCERO\\1 CUATRI\\persona-maquina\\SegurityGuard\\videos\\salida\\output_video_01.mp3\n",
       "\n",
       "Procesando: video_02.mp4\n",
       "Ha llegado un repartidor a tu casa\n",
-      "Vídeo salida: c:\\Users\\jordi\\Documents\\UNI\\SegurityGuard\\videos\\salida\\output_video_02.mp4\n",
-      "Audio salida: c:\\Users\\jordi\\Documents\\UNI\\SegurityGuard\\videos\\salida\\output_video_02.mp3\n",
+      "Vídeo salida: c:\\Users\\alema\\Documents\\Ingenieria IA\\TERCERO\\1 CUATRI\\persona-maquina\\SegurityGuard\\videos\\salida\\output_video_02.mp4\n",
+      "Audio salida: c:\\Users\\alema\\Documents\\Ingenieria IA\\TERCERO\\1 CUATRI\\persona-maquina\\SegurityGuard\\videos\\salida\\output_video_02.mp3\n",
       "\n",
       "Procesando: video_03.mp4\n",
       "Ha llegado un repartidor a tu casa\n",
-      "Vídeo salida: c:\\Users\\jordi\\Documents\\UNI\\SegurityGuard\\videos\\salida\\output_video_03.mp4\n",
-      "Audio salida: c:\\Users\\jordi\\Documents\\UNI\\SegurityGuard\\videos\\salida\\output_video_03.mp3\n",
+      "Vídeo salida: c:\\Users\\alema\\Documents\\Ingenieria IA\\TERCERO\\1 CUATRI\\persona-maquina\\SegurityGuard\\videos\\salida\\output_video_03.mp4\n",
+      "Audio salida: c:\\Users\\alema\\Documents\\Ingenieria IA\\TERCERO\\1 CUATRI\\persona-maquina\\SegurityGuard\\videos\\salida\\output_video_03.mp3\n",
       "\n",
       "Procesando: video_04.mp4\n",
       "Ha llegado un repartidor a tu casa\n",
-      "Vídeo salida: c:\\Users\\jordi\\Documents\\UNI\\SegurityGuard\\videos\\salida\\output_video_04.mp4\n",
-      "Audio salida: c:\\Users\\jordi\\Documents\\UNI\\SegurityGuard\\videos\\salida\\output_video_04.mp3\n",
+      "Vídeo salida: c:\\Users\\alema\\Documents\\Ingenieria IA\\TERCERO\\1 CUATRI\\persona-maquina\\SegurityGuard\\videos\\salida\\output_video_04.mp4\n",
+      "Audio salida: c:\\Users\\alema\\Documents\\Ingenieria IA\\TERCERO\\1 CUATRI\\persona-maquina\\SegurityGuard\\videos\\salida\\output_video_04.mp3\n",
       "\n",
       "Procesando: video_05.mp4\n",
       "Ha llegado un repartidor a tu casa\n",
-      "Vídeo salida: c:\\Users\\jordi\\Documents\\UNI\\SegurityGuard\\videos\\salida\\output_video_05.mp4\n",
-      "Audio salida: c:\\Users\\jordi\\Documents\\UNI\\SegurityGuard\\videos\\salida\\output_video_05.mp3\n"
+      "Vídeo salida: c:\\Users\\alema\\Documents\\Ingenieria IA\\TERCERO\\1 CUATRI\\persona-maquina\\SegurityGuard\\videos\\salida\\output_video_05.mp4\n",
+      "Audio salida: c:\\Users\\alema\\Documents\\Ingenieria IA\\TERCERO\\1 CUATRI\\persona-maquina\\SegurityGuard\\videos\\salida\\output_video_05.mp3\n"
      ]
     }
    ],
@@ -511,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -521,29 +547,34 @@
       "Calibración (negativo=video_01.mp4): max_p_pos=0.937 -> clip_threshold=0.950\n",
       "\n",
       "Procesando: video_01.mp4\n",
-      "[1/5] Ha llegado alguien desconocido a tu casa\n",
-      "Vídeo salida: c:\\Users\\jordi\\Documents\\UNI\\SegurityGuard\\videos\\salida\\output_video_01.mp4\n",
-      "Audio salida: c:\\Users\\jordi\\Documents\\UNI\\SegurityGuard\\videos\\salida\\output_video_01.mp3\n",
+      "[1/6] Ha llegado alguien desconocido a tu casa\n",
+      "Vídeo salida: c:\\Users\\alema\\Documents\\Ingenieria IA\\TERCERO\\1 CUATRI\\persona-maquina\\SegurityGuard\\videos\\salida\\output_video_01.mp4\n",
+      "Audio salida: c:\\Users\\alema\\Documents\\Ingenieria IA\\TERCERO\\1 CUATRI\\persona-maquina\\SegurityGuard\\videos\\salida\\output_video_01.mp3\n",
       "\n",
       "Procesando: video_02.mp4\n",
-      "[2/5] Ha llegado un repartidor a tu casa\n",
-      "Vídeo salida: c:\\Users\\jordi\\Documents\\UNI\\SegurityGuard\\videos\\salida\\output_video_02.mp4\n",
-      "Audio salida: c:\\Users\\jordi\\Documents\\UNI\\SegurityGuard\\videos\\salida\\output_video_02.mp3\n",
+      "[2/6] Ha llegado un repartidor a tu casa\n",
+      "Vídeo salida: c:\\Users\\alema\\Documents\\Ingenieria IA\\TERCERO\\1 CUATRI\\persona-maquina\\SegurityGuard\\videos\\salida\\output_video_02.mp4\n",
+      "Audio salida: c:\\Users\\alema\\Documents\\Ingenieria IA\\TERCERO\\1 CUATRI\\persona-maquina\\SegurityGuard\\videos\\salida\\output_video_02.mp3\n",
       "\n",
       "Procesando: video_03.mp4\n",
-      "[3/5] Ha llegado un repartidor a tu casa\n",
-      "Vídeo salida: c:\\Users\\jordi\\Documents\\UNI\\SegurityGuard\\videos\\salida\\output_video_03.mp4\n",
-      "Audio salida: c:\\Users\\jordi\\Documents\\UNI\\SegurityGuard\\videos\\salida\\output_video_03.mp3\n",
+      "[3/6] Ha llegado un repartidor a tu casa\n",
+      "Vídeo salida: c:\\Users\\alema\\Documents\\Ingenieria IA\\TERCERO\\1 CUATRI\\persona-maquina\\SegurityGuard\\videos\\salida\\output_video_03.mp4\n",
+      "Audio salida: c:\\Users\\alema\\Documents\\Ingenieria IA\\TERCERO\\1 CUATRI\\persona-maquina\\SegurityGuard\\videos\\salida\\output_video_03.mp3\n",
       "\n",
       "Procesando: video_04.mp4\n",
-      "[4/5] Ha llegado un repartidor a tu casa\n",
-      "Vídeo salida: c:\\Users\\jordi\\Documents\\UNI\\SegurityGuard\\videos\\salida\\output_video_04.mp4\n",
-      "Audio salida: c:\\Users\\jordi\\Documents\\UNI\\SegurityGuard\\videos\\salida\\output_video_04.mp3\n",
+      "[4/6] Ha llegado un repartidor a tu casa\n",
+      "Vídeo salida: c:\\Users\\alema\\Documents\\Ingenieria IA\\TERCERO\\1 CUATRI\\persona-maquina\\SegurityGuard\\videos\\salida\\output_video_04.mp4\n",
+      "Audio salida: c:\\Users\\alema\\Documents\\Ingenieria IA\\TERCERO\\1 CUATRI\\persona-maquina\\SegurityGuard\\videos\\salida\\output_video_04.mp3\n",
       "\n",
       "Procesando: video_05.mp4\n",
-      "[5/5] Ha llegado alguien desconocido a tu casa\n",
-      "Vídeo salida: c:\\Users\\jordi\\Documents\\UNI\\SegurityGuard\\videos\\salida\\output_video_05.mp4\n",
-      "Audio salida: c:\\Users\\jordi\\Documents\\UNI\\SegurityGuard\\videos\\salida\\output_video_05.mp3\n"
+      "[5/6] Ha llegado alguien desconocido a tu casa\n",
+      "Vídeo salida: c:\\Users\\alema\\Documents\\Ingenieria IA\\TERCERO\\1 CUATRI\\persona-maquina\\SegurityGuard\\videos\\salida\\output_video_05.mp4\n",
+      "Audio salida: c:\\Users\\alema\\Documents\\Ingenieria IA\\TERCERO\\1 CUATRI\\persona-maquina\\SegurityGuard\\videos\\salida\\output_video_05.mp3\n",
+      "\n",
+      "Procesando: video_06.mp4\n",
+      "[6/6] Ha llegado alguien desconocido a tu casa\n",
+      "Vídeo salida: c:\\Users\\alema\\Documents\\Ingenieria IA\\TERCERO\\1 CUATRI\\persona-maquina\\SegurityGuard\\videos\\salida\\output_video_06.mp4\n",
+      "Audio salida: c:\\Users\\alema\\Documents\\Ingenieria IA\\TERCERO\\1 CUATRI\\persona-maquina\\SegurityGuard\\videos\\salida\\output_video_06.mp3\n"
      ]
     }
    ],
@@ -690,7 +721,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "idspia",
    "language": "python",
    "name": "python3"
   },
@@ -704,7 +735,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.9"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
