--- a/Practica_Multimodal.ipynb
+++ b/Practica_Multimodal.ipynb
@@ -39,7 +39,9 @@
     "\n",
     "## Notas\n",
     "- El sistema está pensado para ser simple y generalizable: funciona con cualquier vídeo donde aparezcan personas.\n",
-    "- Puedes ajustar sensibilidad con `clip_threshold` y `clip_margin` en la función de ejecución del pipeline.\n"
+    "- Puedes ajustar sensibilidad con `clip_threshold` y `clip_margin` en la función de ejecución del pipeline.\n",
+    "- Para ejecutar el código con nuestros videos de prueba o simplemente ver nuestros videos y audios generados clonar el siguiente repositorio: https://github.com/JBLOZ/SegurityGuard.git\n",
+    "|"
    ]
   },
   {
